--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,9 @@ menu:
     - name: Classes
       url: /classes
       weight: 2
+    - name: Calendar
+      url: /calendar
+      weight: 3
     - name: Syllabus
       url: /docs/PEP2022_syllabus.pdf
       weight: 7
